--- a/process_file/Question-paper.html
+++ b/process_file/Question-paper.html
@@ -112,7 +112,7 @@ session_start(); // session is god
 
             <div class="proter-region">
                 <div class="video">
-                    <p>video-view</p>
+                    <p>VIDEO-VIEW</p>
                 </div>
                 <hr>
 
@@ -135,7 +135,6 @@ session_start(); // session is god
                             </ul>
                         </div>
                     </div>
-
                 </div>
                 <button id=" full" class="btn btn-primary"> fullscreen</button>
 
@@ -164,7 +163,7 @@ session_start(); // session is god
        var  where = 1;
     </script>
 
-    <script>
+    <!-- <script>
 
 
 
@@ -454,6 +453,7 @@ session_start(); // session is god
                 };
             }
             else {
+    
                 //Disable the OnMouseUp event handler.
                 document.onmousedown = function (e) {
                     if (e != null && e.type == "mousedown") {
@@ -507,7 +507,7 @@ session_start(); // session is god
                 document.getElementById("finish").style.display="block";
             }
         });
-      </script>
+      </script> -->
 </body>
 
 </html>
