--- a/process_file/index.html
+++ b/process_file/index.html
@@ -50,12 +50,12 @@
                 </g>
               </svg>
 
-              <pre>
-                <h1>
-                LEt's Do Exam 
+              <!-- <pre> -->
+                <h1 style="margin-top: 50px;text-align:center;">
+                Let's Do Exam <br>
                 And Make Future Secure
                 </h1>
-              </pre>
+              <!-- </pre> -->
               
               
         </div>
@@ -68,7 +68,8 @@
                         </h1>
                     </div>
                 </a>
-                    <a href="candidate-login.php"><div class="candidate">
+                    <a href="candidate-login.php">
+                        <div class="candidate" >
                         <h1>
                             Candidate
                         </h1>
