--- a/process_file/index.html
+++ b/process_file/index.html
@@ -28,12 +28,12 @@
         
 
 
-        document.write('<p><strong>Renderer:</strong> '+renderer.toLowerCase()+'</p>');
+        console.log('<p><strong>Renderer:</strong> '+renderer.toLowerCase()+'</p>');
         var l=renderer.toLowerCase();
         console.log(l);
-        document.write('<p><strong>Width: </strong> '+width+'</p>');
-        document.write('<p><strong>Height: </strong> '+height+'</p>');
-        document.write('<p><strong>Color Depth: </strong> '+color_depth+'</p>');
+        // document.write('<p><strong>Width: </strong> '+width+'</p>');
+        // document.write('<p><strong>Height: </strong> '+height+'</p>');
+        // document.write('<p><strong>Color Depth: </strong> '+color_depth+'</p>');
 
         
         </script>
@@ -103,12 +103,12 @@
         </div>
     </div>
     <script>
-        if(l=="angle (intel, intel(r) uhd graphics 620 direct3d11 vs_5_0 ps_5_0, d3d11-27.20.100.9466)" || "angle (nvidia, nvidia geforce mx250 direct3d11 vs_5_0 ps_5_0, d3d11-30.0.14.9613)" || "generic renderer")
-        {
-            console.log("in kr gya");
-            document.getElementById("bdy").style.display="none";
-            alert("Please Get out from Vm!");
-        }
+        // if(l=="angle (intel, intel(r) uhd graphics 620 direct3d11 vs_5_0 ps_5_0, d3d11-27.20.100.9466)" || "angle (nvidia, nvidia geforce mx250 direct3d11 vs_5_0 ps_5_0, d3d11-30.0.14.9613)" || "generic renderer")
+        // {
+        //     console.log("in kr gya");
+        //     document.getElementById("bdy").style.display="none";
+        //     alert("Please Get out from Vm!");
+        // }
 
         if(width<1536)
         {
@@ -117,5 +117,11 @@
             })
         }
     </script>
+    <script>
+        function mouseLeave() {
+            document.getElementById("bdy").style.display = "none";
+            alert("warning No."+" "+ i);
+        }
+      </script>
 </body>
 </html>
