--- a/process_file/proctor-login.html
+++ b/process_file/proctor-login.html
@@ -40,7 +40,7 @@
             </ul>
 
             <ul>
-                <a href="proctor-signup.html"><li>Proctor SignUp</li></a>
+                <a href="proctor-signup.php"><li>Proctor SignUp</li></a>
             </ul>
         </div>
     </nav>
