everything is going good but using sasta way

--- a/process_file/index.html
+++ b/process_file/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="log">
                 <div class="login">
-                    <a href="proctor-login.html"><div class="proctor">
+                    <a href="proctor-login.php"><div class="proctor">
                         <img src="avtart.png" style="border-radius: 50%;">
                         <h1>
                             Proctor
