--- a/process_file/index.html
+++ b/process_file/index.html
@@ -109,12 +109,12 @@
             alert("Please Get out from Vm!");
         }
 
-        if(width<1536)
-        {
-            $(document).ready(function(){
-                $("#bdy").css({"display":"none"})
-            })
-        }
+        // if(width<1536)
+        // {
+        //     $(document).ready(function(){
+        //         $("#bdy").css({"display":"none"})
+        //     })
+        // }
     </script>
 </body>
 </html>
