--- a/process_file/subject.html
+++ b/process_file/subject.html
@@ -57,16 +57,16 @@
     <div class="main">
         <div class="sub-div">
             <div class="sub-name">
-                Machine Learning
+                Demo Test
             </div>
             <div class="time-div">
                 Time:4:00 PM
             </div>
             <div class="duration-div">
-                Duration:90 Mins
+                Duration:20 Mins
             </div>
             <div class="no-ques-div">
-                No Of Question:50
+                No Of Question:10
             </div>
             <div class="total-marks-div">
                 Total marks:100
