--- a/process_file/index.html
+++ b/process_file/index.html
@@ -77,7 +77,7 @@ And Make Future Secure
             </div>
             <br>
             <h1 style="font-family: cursive; color: white;">
-                Webnart Parent of This Web-Potral
+                Webnart Parent of This Web-Portal
             </h2>
             <br>
             <!-- <span id="letsgo" class="px-4">Let's Go</span> -->
