--- a/process_file/index.html
+++ b/process_file/index.html
@@ -9,6 +9,8 @@
     
     <link rel="stylesheet" href="f-page.css">
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&display=swap" rel="stylesheet">
@@ -114,6 +116,12 @@ And Make Future Secure
             document.getElementById("bdy").style.display="none";
             alert("Please Get out from Vm!");
         }
+
+        $(document).ready(function(){  
+            $("#bdy").bind("contextmenu", function(e) {  
+                return false;  
+            });  
+        }); 
     </script>
     
 </body>
