--- a/process_file/Exam-end.html
+++ b/process_file/Exam-end.html
@@ -78,7 +78,7 @@
             <p>
                 Exam-Sumitted Sucessfully!
             </p>
-            <div class="done"><img src="completed-task.png" width="200px" height="200px"></div>
+            <div class="done"><img src="./Assets/completed-task.png" width="200px" height="200px"></div>
         </div>
     </div>
 </body>
