--- a/process_file/index.html
+++ b/process_file/index.html
@@ -45,7 +45,7 @@
 
         <div class="top-nav">
             <a href="index.html">
-                <img src="logo.png" alt="webnart logo">
+                <img src="./Assets/logo.png" alt="webnart logo">
             </a>
             <div class="home-buttons">
                 <a href="Login.php">
